@@ -86,8 +86,8 @@ my %headers = (
          'Accept-Language' =>
              'en;q=1, fr;q=0.9, de;q=0.8, ja;q=0.7, nl;q=0.6, it;q=0.5',
          'Content-Type' => 'application/x-www-form-urlencoded; charset=utf-8',
-         'X-Robinhood-API-Version' => '1.70.0',
-         'User-Agent' => 'Robinhood/823 (iPhone; iOS 7.1.2; Scale/2.00)'
+         'X-Robinhood-API-Version' => '1.120.0',
+         'User-Agent'              => 'Robinhood/2357 (Android/2.19.0)'
 );
 sub errors { shift; carp shift; }
 
